final log; Boolean usage; Javadoc tag usage
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@323602 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: c269eda7069784d553d7df2d93bda8167c8c3cfd